--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
   </head>
   <body>
     <div class="container">
-      <h2>Cupcake ❤️❤️❤️</h2>
-
-      <h1>Will you be my Val 😊 🥰 😘</h1>
+      <h1>Will you be my Val?</h1>
       <div class="buttons">
         <button class="yes-button" onclick="handleYesClick()">Yes</button>
         <button class="no-button" onclick="handleNoClick()">No</button>
